fix 1725.2 - move whitespace on project show page

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -20,6 +20,10 @@
     height: 75px;
   }
 
+  .project_buttons {
+    margin-top: 40px;
+  }
+
   .search-box .padded-col {
   	margin-bottom: 12px;
   }
